# sochisirius_buggy

src/buggy_2dnav/launch/: buggy_configuration.launch  robot_ekf.launch  rtabmap_run.launch  start_all.launch
src/cnn/: CMakeLists.txt  model_h.h5  model_i_nd.h5  model_j_nd.h5  package.xml
src/cnn/launch/: cnn.launch
src/cnn/scripts/: cnn_node.py
src/linedetection/: CMakeLists.txt  package.xml
src/linedetection/include/: linedetection.h
src/linedetection/launch/: linedetection.launch
src/linedetection/src/: linedetection.cpp  linedetection_node.cpp
